--- a/src/scss/components/_navigationbar.scss
+++ b/src/scss/components/_navigationbar.scss
@@ -158,3 +158,10 @@ nav {
 		position: static;
 	}
 }
+
+nav+* {
+	margin-top: $navbar-height;
+	@include override-medium-screen {
+		margin-top: 0;
+	}
+}
